--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+        <title>Media Galaxy</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link rel="stylesheet" href="%sveltekit.assets%/root.css" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+    <footer>Feito por Enzo Pedro Bonacina</footer>
 </html>
